# llvm-practice

./: .gitignore  CMakeLists.txt  README.markdown
scripts/: llvm-build.sh
src/: CMakeLists.txt
src/execution-engine-setup/: CMakeLists.txt  execution-engine-setup.cpp
src/hello-world/: CMakeLists.txt  hello-world.cpp
